# WeatherAPI

./: CMakeLists.txt  README.md  config.json
lib/: CMakeLists.txt
lib/Controller/: Controller.cpp  Controller.h
lib/Model/: Model.cpp  Model.h
lib/View/: View.cpp  View.h
